fixed IE carousel items invisible

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -167,7 +167,6 @@
 [data-vp-layout="slider"] {
     .vp-portfolio__item-wrap {
         float: none;
-        width: auto;
     }
     .vp-portfolio__item-img-wrap {
         position: relative;
